# DiskHouse

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: build-and-push-ghcr.yml
ISCSI/: Cargo.toml  Dockerfile
ISCSI/src/: constants.rs  infra.rs  main.rs  models.rs  routes.rs  workflow.rs
disk/: Cargo.toml  Dockerfile
disk/src/: constants.rs  infra.rs  main.rs  models.rs  monitoring.rs  routes.rs  workflow.rs
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/admin/disks/: route.ts
frontend/app/api/admin/monitoring/: route.ts
frontend/app/api/admin/users/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/me/: route.ts
frontend/app/api/auth/refresh/: route.ts
frontend/app/api/disks/: route.ts
frontend/app/api/monitoring/: route.ts
frontend/app/api/request/: route.ts
frontend/app/api/request/[requestId]/: route.ts
frontend/features/dashboard/: constants.ts  types.ts  utils.ts
frontend/features/dashboard/components/: AdminDisksSection.tsx  AdminMonitoringSection.tsx  AdminUsersSection.tsx  DashboardModals.tsx  DisksSection.tsx  LoginScreen.tsx  OverviewSection.tsx  Sidebar.tsx  ToastPortal.tsx
frontend/lib/: kafka.ts
id/: Cargo.toml  Dockerfile
id/src/: constants.rs  main.rs  models.rs  service.rs
personal/: Cargo.toml  Dockerfile
personal/src/: constants.rs  infra.rs  main.rs  models.rs  workflow.rs
storage-node/: Cargo.toml  Dockerfile
storage-node/src/: constants.rs  driver.rs  infra.rs  main.rs  models.rs  workflow.rs
(+1 files in other folders)
